--- a/index.html
+++ b/index.html
@@ -1,16 +1,125 @@
-<!DOCTYPE html>
-<html>
-
+<!doctype html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>OpsBoard — Your business, one daily ritual.</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-  Hello world
-  <script src="script.js"></script>
-</body>
+  <!-- Nav -->
+  <nav class="nav">
+    <div class="container inner">
+      <a class="brand" href="index.html">
+        <span class="logo"></span><span>OpsBoard</span>
+      </a>
+      <div style="display:flex;gap:10px;align-items:center">
+        <a href="features.html" class="btn ghost">Features</a>
+        <a href="pricing.html" class="btn ghost">Pricing</a>
+        <a href="login.html" class="btn">Sign in</a>
+      </div>
+    </div>
+  </nav>
 
+  <!-- Hero -->
+  <header class="hero">
+    <div class="container">
+      <span class="badge">New</span>
+      <h1>Your entire business, one daily ritual.</h1>
+      <p>See only what moves the needle: a top focus, three key tasks, and the KPIs that matter — all in one calm place.</p>
+      <div class="cta">
+        <a href="login.html" class="btn">Get started free</a>
+        <a href="pricing.html" class="btn ghost">See pricing</a>
+      </div>
+    </div>
+  </header>
+
+  <!-- Value props -->
+  <section class="section">
+    <div class="container">
+      <h2>Why OpsBoard?</h2>
+      <p class="lead">Founders don’t need more tabs — they need a ritual. OpsBoard turns daily chaos into deliberate progress.</p>
+      <div class="grid cards-3">
+        <article class="card">
+          <h3>Focus over noise</h3>
+          <p>Start the day with one clear win. Add up to three supporting tasks. Finish with momentum.</p>
+        </article>
+        <article class="card">
+          <h3>Your key numbers</h3>
+          <p>Track revenue, visitors, subs, and followers at a glance. Keep your growth visible.</p>
+        </article>
+        <article class="card">
+          <h3>Snapshots & history</h3>
+          <p>Save a one-click snapshot each evening. Review trends and celebrate compounding wins.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- How it works -->
+  <section class="section">
+    <div class="container">
+      <h2>How it works</h2>
+      <div class="grid cards-3">
+        <div class="card">
+          <span class="badge">Step 1</span>
+          <h3>Set your Top Focus</h3>
+          <p>Define the single outcome that would make today a success.</p>
+        </div>
+        <div class="card">
+          <span class="badge">Step 2</span>
+          <h3>Pick three tasks</h3>
+          <p>Choose only what supports the focus. Say no to everything else.</p>
+        </div>
+        <div class="card">
+          <span class="badge">Step 3</span>
+          <h3>Log your KPIs</h3>
+          <p>Record the numbers that matter. Save a snapshot. Repeat daily.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Social proof -->
+  <section class="section">
+    <div class="container">
+      <h2>Loved by builders</h2>
+      <div class="grid cards-3">
+        <blockquote class="card">
+          <p>“My mornings finally have a shape. Simpler than Notion, more honest than a to-do list.”</p>
+          <p class="muted">— Indie hacker</p>
+        </blockquote>
+        <blockquote class="card">
+          <p>“The snapshot ritual alone is worth it. I actually see progress now.”</p>
+          <p class="muted">— Agency owner</p>
+        </blockquote>
+        <blockquote class="card">
+          <p>“It’s the only dashboard I open every single day.”</p>
+          <p class="muted">— Creator</p>
+        </blockquote>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <section class="section">
+    <div class="container center">
+      <h2>Make today count</h2>
+      <p class="lead">Start free. It takes 30 seconds to set up your first board.</p>
+      <a href="login.html" class="btn">Create your board</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container" style="display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap">
+      <div>© OpsBoard</div>
+      <div style="display:flex;gap:16px">
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="pricing.html">Pricing</a>
+      </div>
+    </div>
+  </footer>
+</body>
 </html>
