--- a/dashboard.html
+++ b/dashboard.html
@@ -92,8 +92,8 @@
 
 <script type="module">
   import { createClient } from 'https://esm.sh/@supabase/supabase-js'
-  const SUPABASE_URL  = 'https://YOUR-PROJECT-REF.supabase.co'
-  const SUPABASE_ANON = 'YOUR-ANON-KEY'
+  const SUPABASE_URL  = 'https://xcsbogfddhvbyscjkjsi.supabase.co'
+  const SUPABASE_ANON = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inhjc2JvZ2ZkZGh2YnlzY2pranNpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUyNzUzMjksImV4cCI6MjA3MDg1MTMyOX0.HGX4G2zw0F_EwMRuYOx3SMnP9qxurLHiYBUOe-9FEVk'
   const supabase = createClient(SUPABASE_URL, SUPABASE_ANON)
 
   const $ = (s)=>document.querySelector(s)
