--- a/dashboard.html
+++ b/dashboard.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>OpsBoard — Dashboard</title>
+<title>CoreBoard — Dashboard</title>
 <link rel="stylesheet" href="styles.css"/>
 <body style="font-family:Inter,system-ui;background:#0b0b0c;color:#fff">
   <nav class="nav">
     <div class="container inner">
-      <a class="brand" href="index.html"><span class="logo"></span><span>OpsBoard</span></a>
+      <a class="brand" href="index.html"><span class="logo"></span><span>CoreBoard</span></a>
       <div style="display:flex;gap:10px">
         <a href="pricing.html" class="btn ghost">Pricing</a>
         <button id="signout" class="btn">Sign out</button>
