--- a/features.html
+++ b/features.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>OpsBoard — Features</title>
+  <title>CoreBoard — Features</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <nav class="nav">
     <div class="container inner">
-      <a class="brand" href="index.html"><span class="logo"></span><span>OpsBoard</span></a>
+      <a class="brand" href="index.html"><span class="logo"></span><span>CoreBoard</span></a>
       <div style="display:flex;gap:10px">
         <a href="features.html" class="btn ghost">Features</a>
         <a href="pricing.html" class="btn ghost">Pricing</a>
@@ -22,7 +22,7 @@
     <div class="container">
       <span class="badge">Overview</span>
       <h1>Everything you need, nothing you don’t.</h1>
-      <p class="lead">OpsBoard is a daily cockpit for founders and creators. One focus, three tasks, the KPIs that matter.</p>
+      <p class="lead">CoreBoard is a daily cockpit for founders and creators. One focus, three tasks, the KPIs that matter.</p>
     </div>
   </header>
 
@@ -55,7 +55,7 @@
 
   <footer class="footer">
     <div class="container" style="display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap">
-      <div>© OpsBoard</div>
+      <div>© CoreBoard</div>
       <div style="display:flex;gap:16px">
         <a href="index.html">Home</a><a href="features.html">Features</a><a href="pricing.html">Pricing</a>
       </div>
