--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>OpsBoard — Your business, one daily ritual.</title>
+  <title>CoreBoard — Your business, one daily ritual.</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
   <nav class="nav">
     <div class="container inner">
       <a class="brand" href="index.html">
-        <span class="logo"></span><span>OpsBoard</span>
+        <span class="logo"></span><span>CoreBoard</span>
       </a>
       <div style="display:flex;gap:10px;align-items:center">
         <a href="features.html" class="btn ghost">Features</a>
