--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>OpsBoard — Sign in</title>
+  <title>CoreBoard — Sign in</title>
   <link rel="stylesheet" href="styles.css"/>
   <style>
     /* small page-specific helpers, uses your palette */
@@ -25,7 +25,7 @@
   <!-- Nav -->
   <nav class="nav">
     <div class="container inner">
-      <a class="brand" href="index.html"><span class="logo"></span><span>OpsBoard</span></a>
+      <a class="brand" href="index.html"><span class="logo"></span><span>CoreBoard</span></a>
       <div style="display:flex;gap:10px">
         <a href="features.html" class="btn ghost">Features</a>
         <a href="pricing.html" class="btn ghost">Pricing</a>
