--- a/pricing.html
+++ b/pricing.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>OpsBoard — Pricing</title>
+  <title>CoreBoard — Pricing</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <!-- Nav -->
   <nav class="nav">
     <div class="container inner">
-      <a class="brand" href="index.html"><span class="logo"></span><span>OpsBoard</span></a>
+      <a class="brand" href="index.html"><span class="logo"></span><span>CoreBoard</span></a>
       <div style="display:flex;gap:10px">
         <a href="features.html" class="btn ghost">Features</a>
         <a href="pricing.html" class="btn ghost">Pricing</a>
