--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <!-- Value props -->
   <section class="section">
     <div class="container">
-      <h2>Why OpsBoard?</h2>
-      <p class="lead">Founders don’t need more tabs — they need a ritual. OpsBoard turns daily chaos into deliberate progress.</p>
+      <h2>Why CoreBoard?</h2>
+      <p class="lead">Founders don’t need more tabs — they need a ritual. CoreBoard turns daily chaos into deliberate progress.</p>
       <div class="grid cards-3">
         <article class="card">
           <h3>Focus over noise</h3>
@@ -113,7 +113,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container" style="display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap">
-      <div>© OpsBoard</div>
+      <div>© CoreBoard</div>
       <div style="display:flex;gap:16px">
         <a href="#">Privacy</a>
         <a href="#">Terms</a>
