--- a/pricing.html
+++ b/pricing.html
@@ -79,7 +79,7 @@
       <!-- changed from "grid cards-2" to "faq-grid" -->
       <div class="faq-grid">
         <details class="card">
-          <summary>Can I use OpsBoard free forever?</summary>
+          <summary>Can I use CoreBoard free forever?</summary>
           <p>Yes. The Free plan includes the full daily ritual and 30 days of local history.</p>
         </details>
         <details class="card">
@@ -101,7 +101,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container" style="display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap">
-      <div>© OpsBoard</div>
+      <div>© CoreBoard</div>
       <div style="display:flex;gap:16px">
         <a href="index.html">Home</a>
         <a href="features.html">Features</a>
